# WalrusAPI

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/controllers/: Air.cpp  Air.hpp  Land.cpp  Land.hpp
src/formatters/b-europe/: JourneyFormatter.cpp  JourneyFormatter.hpp  LocationFormatter.cpp  LocationFormatter.hpp
src/formatters/hafas/: Formatters.cpp  Formatters.hpp  JourneyFormatter.cpp  JourneyFormatter.hpp  LineFormatter.cpp  LineFormatter.hpp  LocationFormatter.cpp  LocationFormatter.hpp
src/formatters/tequila/: JourneyFormatter.cpp  JourneyFormatter.hpp
src/formatters/uov/: JourneyFormatter.cpp  JourneyFormatter.hpp  LocationFormatter.cpp  LocationFormatter.hpp
src/parsers/: DateTime.cpp  DateTime.hpp
src/parsers/beurope/: DateTime.cpp  DateTime.hpp
src/parsers/hafas/: CommonParser.cpp  CommonParser.hpp
src/services/: BEuropaService.cpp  BEuropaService.hpp  HafasService.cpp  HafasService.hpp  NearbyAirports.cpp  NearbyAirports.hpp  NearbyStations.cpp  NearbyStations.hpp  TequilaService.cpp  TequilaService.hpp  UOvService.cpp  UOvService.hpp
src/services/tools/: Checksum.cpp  Checksum.hpp  FilePaths.cpp  FilePaths.hpp  JsonResponses.cpp  JsonResponses.hpp  Locations.cpp  Locations.hpp  Logger.cpp  Logger.hpp  Parameters.hpp  Scraper.cpp  Scraper.hpp
